syntax = "proto3";

package proto;

service HomeworkService {
  rpc GetSum (Numbers) returns (Sum) {}
  rpc OrderNumbers (NumbersToOrder) returns (OrderedNumbers) {}
}

message Numbers {
  int64 nb1 = 1;
  int64 nb2 = 2;
}

message Sum {
  int64 sum = 1;
}

message NumbersToOrder {
  repeated int64 array = 1;
}

message OrderedNumbers {
  repeated int64 orderedArray = 1;
}